--- a/css/style.css
+++ b/css/style.css
@@ -115,19 +115,64 @@ body {
 
 /* End NavigitionBar Section */
 
+/* ================================================================= */
 
 .slider {
     width: 100%;
     height: 450px;
-    background: #f4f4f4;
-}
-
-.slider .slide {
-   text-align: center;
-   padding: 24px 0;
+    background-color: #f4f4f4;
     
 }
 
-.slider .slide > img {
+.slider .container {
+    overflow: hidden;
+    width: 825px;
+    height: 450px;
+    margin: auto;
+}
+
+.slider .container .slides {
+    position: relative;    
+    animation: sliding 5s ease-in-out infinite;
+    cursor: pointer;
+    display: flex;
+
+    
+}
+
+.slider .container .slides:hover {
+    animation-play-state: paused;
 
 }
+.slider .container .slides img {
+    
+}
+
+
+
+ @keyframes sliding {
+    0% {
+        left: 0;
+    }
+    /* 10% {
+        left: -125px;
+    }
+    20% {
+        left: -225px;
+    }
+    30% {
+        left: -325px;
+    }
+    40% {
+        left: -425px;
+    }
+    50% {
+        left: -525px;
+    }
+    60% {
+        left: -625px;
+    } */
+    100% {
+        left: -825px;
+    }
+} 
