--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,99 @@ body {
 
 /* ================================================================= */
 
+/* Start Slider Section */
+
+.slider {
+    width: 100%;
+    height: 450px;
+    background: #f4f4f4;
+    overflow: hidden;
+}
+
+.slider .slider-item {
+    width: 65%;
+    display: flex;
+    justify-content: space-between;
+    margin: 24px auto; 
+}
+
+.slider .slider-item .item {
+    width: 825px;
+    display: none;
+    position: relative;
+   
+}
+    
+.slider .slider-item .item.active {
+    display: block;
+}
+
+.slider .slider-item .item img {
+    width: 825px;
+    height: 402px;
+}
+
+.slider .slider-item .item .caption {
+    position: absolute;
+    color: cyan;
+    border: 1px solid cyan;
+    padding: 15px;
+    left: 50%;
+    bottom: 25px;
+    transform: translate(-50%,-50%);
+    
+    
+}
+
+
+
+
+
+
+
+/* End Slider Section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ================================================================= */
+/*
 .slider {
     width: 100%;
     height: 450px;
@@ -136,13 +229,13 @@ body {
     animation: sliding 5s ease-in-out infinite;
     cursor: pointer;
     display: flex;
-
+    
     
 }
 
 .slider .container .slides:hover {
     animation-play-state: paused;
-
+    
 }
 .slider .container .slides img {
     
@@ -150,11 +243,11 @@ body {
 
 
 
- @keyframes sliding {
+@keyframes sliding {
     0% {
         left: 0;
     }
-    /* 10% {
+    10% {
         left: -125px;
     }
     20% {
@@ -171,8 +264,10 @@ body {
     }
     60% {
         left: -625px;
-    } */
+    }
     100% {
         left: -825px;
     }
-} 
+}*/ 
+
+/* ================================================================= */
