--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,6 @@ body {
 
 /* Start Slider Section */
 
-<<<<<<< HEAD
-
 .slider-container {
     width: 65%;
     height: 450px;
@@ -151,14 +149,44 @@ body {
     opacity: 1;
 }
 
-.slide-control {
+.slider-control {
     width: 825px;
     margin: auto;
-    position: relative;       
+    position: relative; 
+    bottom: 42px;      
 }
 
-.slide-control .prev,
-.slide-control .next {
+.slider-control .indicators {
+    float: left;
+    width: 50%;
+    
+}
+
+.slider-control .indicators ul {
+    list-style: none;
+    text-align: center;
+    margin: 0;
+}
+
+.slider-control .indicators > ul > li {
+    display: inline-block;
+    margin: 0 2px;
+    width: 28px;
+    height: 28px;
+    background: #f6f6f6;
+    color: #333;
+    font-weight: bold;
+    border-radius: 4px;
+    line-height: 28px;
+    cursor: pointer;
+}
+
+.slider-control .indicators > ul > li.active {
+    background: #009688;
+    color: #fff;
+}
+.slider-control .prev,
+.slider-control .next {
     background: #009688;
     color: #fff;
     font-size: 16px;
@@ -170,63 +198,17 @@ body {
     user-select: none;
 }
 
-.slide-control .prev {
+.slider-control .prev {
     float: left;
     position: absolute;
-    left: -15%;
+    left: -25%;
 }
 
-.slide-control .next {
+.slider-control .next {
     float: right;
     position: absolute;
-    right: 15%;
+    right: 26%;
 }
-=======
-.slider {
-    width: 100%;
-    height: 450px;
-    background: #f4f4f4;
-    overflow: hidden;
-}
-
-.slider .slider-item {
-    width: 65%;
-    display: flex;
-    justify-content: space-between;
-    margin: 24px auto; 
-}
-
-.slider .slider-item .item {
-    width: 825px;
-    display: none;
-    position: relative;
-   
-}
-    
-.slider .slider-item .item.active {
-    display: block;
-}
-
-.slider .slider-item .item img {
-    width: 825px;
-    height: 402px;
-}
-
-.slider .slider-item .item .caption {
-    position: absolute;
-    color: cyan;
-    border: 1px solid cyan;
-    padding: 15px;
-    left: 50%;
-    bottom: 25px;
-    transform: translate(-50%,-50%);
-    
-    
-}
-
-
-
->>>>>>> 26a4c679e7933d5ca71f0c9586db3ceed3815357
 
 
 
